demo/app/static/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Scheherazade&subset=Arabic');


#title-hero {
    background: linear-gradient( rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.8) ), url(../images/background5.jpg);
    background-position: center;
    /* height: 160px; */
}

#input-form {
    margin: 20px 0 20px 0;
}

table {
    /* background-color: rgb(215, 246, 250) !important; */
    margin: auto;
}

td {
    text-align: center !important;
    padding: 0 !important;
    color: white;
}


.button {
    height: auto;
    font-weight: bold;
    /* font-size: 28px; */
}

.square {
    width: 25px;
    height: 25px;
    padding: 0;
    margin: 2px;
}

body {
    font-family: Scheherazade, serif;
    font-size: 22px;
}

.mx-6 {
    margin-left: 1rem !important;
    margin-right: 1rem !important;
}


@media screen and (max-width: 768px) {
.is-size-4-mobile {
    font-size: 2rem!important;
}
}

h1 {
    font-weight:500 !important;
    /* font-family: Changa; */
}

#intro-text {
    margin: 20px 0 0 0;
    line-height: 1 !important;
}

.keyboard {
    padding: 0 !important;
}

#examples {
    background-color: white;
}


.ar-text {
    font-size: 125%;
}

.footer {
    background-color: inherit;
    font-size: smaller;
    padding: 0 1rem !important;
    line-height: 1 !important;
}

.table, #footer, #romanize-button {
    background-color:#604245;
}

#arabic-intro-text {
    font-size: 88%;
}

#english-intro-text {
    font-size: 84%;

}

/**
            * ==============================================
            * Dot Windmill
            * ==============================================
            */
            .dot-windmill {
                position: relative;
                top: -10px;
                width: 10px;
                height: 10px;
                border-radius: 5px;
                background-color: #9880ff;
                color: #9880ff;
                transform-origin: 5px 15px;
                animation: dotWindmill 2s infinite linear;
                }
    
                .dot-windmill::before, .dot-windmill::after {
                content: '';
                display: inline-block;
                position: absolute;
                }
    
                .dot-windmill::before {
                left: -8.66px;
                top: 15px;
                width: 10px;
                height: 10px;
                border-radius: 5px;
                background-color: #9880ff;
                color: #9880ff;
                }
    
                .dot-windmill::after {
                left: 8.66px;
                top: 15px;
                width: 10px;
                height: 10px;
                border-radius: 5px;
                background-color: #9880ff;
                color: #9880ff;
                }
    
                @keyframes dotWindmill {
                0% {
                    transform: rotateZ(0deg) translate3d(0, 0, 0);
                }
                100% {
                    transform: rotateZ(720deg) translate3d(0, 0, 0);
                }
                }

